fix: stabilize direction counting and tracking pipeline

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,18 @@ SECRET_KEY=your_random_secret_key_here
 
 # 선택 사항
 # KMP_DUPLICATE_LIB_OK=TRUE  # macOS OpenMP 이슈 해결 시
+
+# 방향 기반 카운팅 튜닝 (카메라 좌표계: y 증가=아래)
+# ADD_DIRECTION=down                  # down: 위→아래(add), up: 아래→위(add)
+# DIRECTION_MIN_MOVEMENT=0.05         # 최소 이동량(정규화 비율)
+# DIRECTION_HISTORY_FRAMES=20         # centroid 최대 히스토리 길이
+# DIRECTION_MIN_HISTORY_POINTS=4      # 방향 판정 최소 포인트 수
+# INLINE_DIRECTION_MIN_MOVEMENT=0.08  # 인라인 카운트 최소 이동량(엄격)
+# INLINE_DIRECTION_MIN_HISTORY_POINTS=8  # 인라인 최소 포인트 수
+# LABEL_STALE_FRAMES=4                # 마지막 매칭 라벨 유효 프레임
+# BG_WARMUP_FRAMES=24                 # 시작 직후 카운트 비활성화 프레임
+# SOFT_REENTRY_FRAMES=5               # 짧은 이탈 후 재진입 리셋 프레임
+# OPPOSITE_ACTION_COOLDOWN_SECONDS=1.5  # 반대 동작 허용 최소 간격
+
+# Frontend 캡처 전송 주기(ms): 80ms ≈ 12.5FPS
+# VITE_CAPTURE_INTERVAL_MS=80
