--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,16 @@ SECRET_KEY=your_random_secret_key_here
 # DIRECTION_MIN_HISTORY_POINTS=4      # 방향 판정 최소 포인트 수
 # INLINE_DIRECTION_MIN_MOVEMENT=0.08  # 인라인 카운트 최소 이동량(엄격)
 # INLINE_DIRECTION_MIN_HISTORY_POINTS=8  # 인라인 최소 포인트 수
+# DIRECTION_SIGN_CONSISTENCY=0.7      # y-증감 부호 일관성 최소 비율(0~1)
+# DIRECTION_SIGN_EPSILON=0.003        # 부호 계산 시 무시할 미세 dy
+# FAST_DECISION_MIN_MOVEMENT=0.12     # 고속 스와이프 조기판정 최소 이동량
+# FAST_DECISION_MIN_HISTORY_POINTS=4  # 고속 스와이프 조기판정 최소 포인트
+# FAST_DECISION_SIGN_CONSISTENCY=0.85 # 고속 조기판정 부호 일관성(더 엄격)
+# INFER_BURST_TRACK_AGE=6             # 신규 트랙 초기 추론 버스트(age 이하 매프레임)
+# TRACK_MIN_AGE_FRAMES=6              # 트랙 안정화 최소 프레임
+# TRACK_LABEL_WINDOW=6                # 트랙 라벨 투표 윈도우 길이
+# TRACK_LABEL_MIN_VOTES=2             # 라벨 확정 최소 득표 수
+# TRACK_STATE_TTL_FRAMES=18           # 미탐지 트랙 상태 제거 프레임
 # LABEL_STALE_FRAMES=4                # 마지막 매칭 라벨 유효 프레임
 # BG_WARMUP_FRAMES=24                 # 시작 직후 카운트 비활성화 프레임
 # SOFT_REENTRY_FRAMES=5               # 짧은 이탈 후 재진입 리셋 프레임
