--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -31,6 +31,7 @@ scikit-learn
 
 # Authentication & Database
 sqlalchemy>=2.0.0
+pymysql>=1.1.1
 bcrypt>=4.0.0
 python-jose[cryptography]>=3.3.0
 python-multipart  # Already included above but needed for OAuth2
