--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,12 @@ HUGGINGFACE_HUB_TOKEN=your_huggingface_token_here
 # 랜덤 문자열 생성 권장: python -c "import secrets; print(secrets.token_urlsafe(32))"
 SECRET_KEY=your_random_secret_key_here
 
-# DB 연결 (미설정 시 SQLite 사용)
-# SQLite (기본)
-# DATABASE_URL=sqlite:///data/ebrcs.db
-
+# DB 연결 (필수: MySQL)
 # MySQL (운영/공유 DB)
 # DATABASE_URL=mysql+pymysql://<USER>:<PASSWORD>@127.0.0.1:3306/item_db
 
 # Docker 로컬 MySQL (db/start_local_mysql.sh 기본값)
-# DATABASE_URL=mysql+pymysql://ebrcs_app:ebrcs_pass@127.0.0.1:3307/item_db
+DATABASE_URL=mysql+pymysql://ebrcs_app:ebrcs_pass@127.0.0.1:3307/item_db
 
 # 선택 사항
 # KMP_DUPLICATE_LIB_OK=TRUE  # macOS OpenMP 이슈 해결 시
