--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -29,6 +29,9 @@ deep-sort-realtime>=1.3.2
 filterpy>=1.4.5
 scikit-learn
 
+# HTTP Client (chatbot LLM calls)
+httpx>=0.27.0
+
 # Authentication & Database
 sqlalchemy>=2.0.0
 pymysql>=1.1.1
